Mobile layout overlap fixed

--- a/css/main.scss
+++ b/css/main.scss
@@ -164,3 +164,12 @@ section {
     text-align: center;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .maincard {
+    .right {
+      position: fixed;
+      margin-left: 50%;
+    }
+  }
+}
